# ww

./: .gitignore  .wwrc  NOTES.org  PKG.sh  README.html  README.org  TODO.html  TODO.org  VERSION  configure.ac
src/: Makefile  Makefile.am  argument.c  art.c  buffer.c  calc.c  confirmbox.c  debug.sh  default-config.c  flags.c  fuzzy.c  glconf.c  io.c  lex.c  lexer.c  line.c  location.c  main.c  mem.c  minibuffer.c  parser.c  premake.py  rc.c  sig  str.c  sv.c  term.c  trie.c  tut.c  utils.c  window.c  ww.c
src/include/: argument.h  array.h  art.h  buffer.h  calc.h  colors.h  config.h.in~  confirmbox.h  controls-buffer.h  copying.h  default-config.h  error.h  flags.h  fuzzy.h  glconf.h  helpbuf.h  io.h  lex.h  lexer.h  line.h  location.h  map.h  mem.h  minibuffer.h  pair.h  parser.h  qcl.h  rc.h  set.h  str.h  sv.h  term.h  trie.h  tut.h  utils.h  window.h  ww.h
src/t/: tmp.txt
src/test/: tabs.txt
src/tmp/: main.c
